--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -47,3 +47,9 @@
   background-color: #f0f0f0; /* Change to your desired background color on hover */
   /* Add any other styling you want for the hover effect */
 }
+
+.mapboxgl-canvas {
+  position: relative;
+  height: 100%;
+  width: 100%
+}
