--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: rgba(254, 251, 248, 0.96);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,8 +31,8 @@ body {
 }
 
 h1 {
+  font-family: 'CosmicVibrant', sans-serif;
   font-size: 3.2em;
-  line-height: 1.1;
 }
 
 button {
@@ -65,4 +65,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+@font-face {
+  font-family: "CosmicVibrant";
+  src:
+url("./fonts/CosmicVibrant-Regular.otf") format("opentype");;
+  font-weight: normal;
 }
