--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -43,6 +43,7 @@
 
 /* custom.css */
 .navbar-nav .nav-item .nav-link:hover {
+  position: absolute;
   color: black; /* Change to your desired text color on hover */
   background-color: #f0f0f0; /* Change to your desired background color on hover */
   /* Add any other styling you want for the hover effect */
