--- a/front-end/src/components/Map.css
+++ b/front-end/src/components/Map.css
@@ -1,8 +1,19 @@
 #root {
-    max-width: 1280px;
+    max-width: 100%;
+    height: 100%;
     margin: 0 auto;
     padding: 2rem;
-    text-align: center;
+    display: inline-block
+    right: 0;
+
+  }
+ 
+  body {
+    margin: 0;
+    display: flex;
+    place-items: right;
+    min-width: 320px;
+    min-height: 100vh;
   }
 
   .navbar-nav .nav-item .nav-link:hover {
@@ -21,6 +32,7 @@
     border-radius: 10px;
     cursor: pointer;
   }
+  
 
   #map-container {
     height: 100%;
@@ -28,3 +40,6 @@
     /* temporarily set the background color so we can tell where the map container is positioned */
     background-color: lightgrey;
   }
+
+
+  
